# dacon_news_recommendation

./: ease_300.csv  ease_3000.csv  pyproject.toml  submission_cf_ease_noaug_lambda1_weighted.csv  submission_cf_euclidean.csv  submission_ease_noaug_lambda1.csv  submission_ease_noaug_lambda2.5.csv  submission_ensemble_cf_euclidean_cosine_ease_noaug.csv  submission_recvae_aug_hidden600_latent200.csv  submission_recvae_noaug_hidden600_latent200.csv
news_recommendation/: test.ipynb
news_recommendation/models/: bivae.py  cf.py  ease.py  recvae.py  sansa.py
news_recommendation/scripts/: aaa.py  bivae_train.py  cf_train.py  ease_train.py  inference.py  preprocessing.py  train.py
news_recommendation/utils/: article_encoder.pkl  augmentation.py  dataset.py  early_stopping.py  metrics.py  train.py  train_test_split.py  user_encoder.pkl
